[gd_scene load_steps=6 format=2]

[ext_resource path="res://GamePlaying/Overlay/HUD.gd" type="Script" id=1]
[ext_resource path="res://Ressources/Fonts/Raleway-Medium.ttf" type="DynamicFontData" id=2]

[sub_resource type="AnimatedTexture" id=1]

[sub_resource type="DynamicFont" id=2]
extra_spacing_top = 2
extra_spacing_bottom = 2
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
extra_spacing_char = 2
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="LogDev" type="MarginContainer" parent="."]
light_mask = 524288
anchor_right = 0.029
anchor_bottom = 0.071
margin_left = -4.0
margin_top = -3.0
margin_right = 303.6
margin_bottom = 136.1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="LogDev"]
light_mask = 524288
margin_right = 354.0
margin_bottom = 203.0
rect_clip_content = true
texture = SubResource( 1 )
patch_margin_top = 200
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="LogDev"]
margin_right = 354.0
margin_bottom = 203.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="LogDev/MarginContainer"]
margin_right = 354.0
margin_bottom = 203.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedLabel" type="Label" parent="LogDev/MarginContainer/CenterContainer"]
modulate = Color( 0, 1, 0.321569, 0.866667 )
light_mask = -2147483647
margin_left = 132.0
margin_top = 89.0
margin_right = 221.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 2 )
text = "Hey there"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckButton" parent="."]
margin_left = 168.0
margin_top = 224.0
margin_right = 244.0
margin_bottom = 264.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 8.0
margin_top = 232.0
margin_right = 169.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 3 )
text = "Player Camera"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
